syntax = "proto3";

package calculator;

option go_package =  "github.com/victorvbello/gonotes/course/grpc/calculator/proto";

message AvgRequest {
    int64 number = 1;
}

message AvgResponse {
    double result = 1;
}