syntax = "proto3";

package calculator;

option go_package = "github.com/victorvbello/gonotes/course/grpc/calculator/proto";

message MaxRequest{
    int32 number = 1;
}

message MaxResponse{
    int32 result = 1;
}