syntax = "proto3";

package calculator;

option go_package =  "github.com/victorvbello/gonotes/course/grpc/calculator/proto";

message SqrtRequest {
    int32 number = 1; //for testing purpose is int32, could by uint32
}

message SqrtResponse {
    double result = 1;
}