syntax = "proto3";

package calculator;

option go_package =  "github.com/victorvbello/gonotes/course/grpc/calculator/proto";


message SumRequest {
    int32 a = 1;
    int32 b = 2;
}

message SumResponse {
    int32 result = 1;
}